categoryのupdateに関する関数
